--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <button type="button" class="popup__close-button"></button>
           <!-- https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_figcaption_css -->
           <figure class="popup__figure">
-            <img class="popup__image" src="" alt=""/>
+            <img class="popup__image" src="temp.jpg" alt="pic"/>
             <figcaption class="popup__caption"></figcaption>
           </figure>
         </div>
